X11-units/Intrinsic.pp


unit Intrinsic;
interface

{
  Automatically converted by H2Pas 1.0.0 from /usr/include/X11/Intrinsic.h
  The following command line parameters were used:
    /usr/include/X11/Intrinsic.h
    -s
    -S
    -o
    /n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/X11/X11-units/Intrinsic.pp
}

Type
P_XtString  = ^_XtString;
PAtom  = ^Atom;
PBoolean  = ^Boolean;
PCardinal  = ^Cardinal;
Pchar  = ^char;
PDimension  = ^Dimension;
PDisplay  = ^Display;
Pdword  = ^dword;
PKeyCode  = ^KeyCode;
PKeySym  = ^KeySym;
Plongint  = ^longint;
PModifiers  = ^Modifiers;
PPosition  = ^Position;
PScreen  = ^Screen;
PString  = ^String;
PTime  = ^Time;
PWidget  = ^Widget;
PXEvent  = ^XEvent;
PXGCValues  = ^XGCValues;
PXrmOptionDescRec  = ^XrmOptionDescRec;
PXrmValue  = ^XrmValue;
PXtActionList  = ^XtActionList;
PXtAppContext  = ^XtAppContext;
PXtCacheRef  = ^XtCacheRef;
PXtInputId  = ^XtInputId;
PXtIntervalId  = ^XtIntervalId;
PXtPointer  = ^XtPointer;
PXtRequestId  = ^XtRequestId;
PXtResourceList  = ^XtResourceList;
PXtSignalId  = ^XtSignalId;
PXtWidgetGeometry  = ^XtWidgetGeometry;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}




{$ifndef _XtIntrinsic_h}
{$define _XtIntrinsic_h}  
{$include	<X11/Xlib.h>}
{$include	<X11/Xutil.h>}
{$include	<X11/Xresource.h>}
{$include	<X11/Xfuncproto.h>}
{$ifdef XT_BC}
{$include <X11/Xos.h>		/* for R4 compatibility */}
{$else}
{$include <X11/Xosdefs.h>}
{$include <string.h>		/* for XtNewString */}
{$endif}


  const
    XtSpecificationRelease = 7;    

{$ifdef _CONST_X_STRING}

  type
    String = ^char;
{$else}

  type
    String = ^char;
{$endif}

(* error 
#define _XtString char*
in define line 82 *)

{$if NeedWidePrototypes}

    const
      _XtBoolean = longint;      
      _XtDimension = dword;      
      _XtKeyCode = dword;      
      _XtPosition = longint;      
      _XtXtEnum = dword;      
{$else}

    const
      _XtBoolean = Boolean;      
      _XtDimension = Dimension;      
      _XtKeyCode = KeyCode;      
      _XtPosition = Position;      
      _XtXtEnum = XtEnum;      
{$endif}

{$include <stddef.h>}
{$ifdef VMS}

    const
      externalref = globalref;      
(* error 
#define externaldef(psect) globaldef {"psect"} noshare
in define line 103 *)
{$else}
(* error 
#define externalref extern
in define line 105 *)
(* error 
#define externaldef(psect)
in define line 106 *)
{$endif}

{$ifndef FALSE}

    const
      FALSE = 0;      
      TRUE = 1;      
{$endif}

    function XtNumber(arr : longint) : Cardinal;    


  type
    Widget = ^_WidgetRec;

    WidgetList = ^Widget;

    WidgetClass = ^_WidgetClassRec;

    CompositeWidget = ^_CompositeRec;

    XtActionList = ^_XtActionsRec;

    XtEventTable = ^_XtEventRec;

    XtAppContext = ^_XtAppStruct;

    XtValueMask = dword;

    XtIntervalId = dword;

    XtInputId = dword;

    XtWorkProcId = dword;

    XtSignalId = dword;

    XtGeometryMask = dword;

    XtGCMask = dword;


    Pixel = dword;


    XtCacheType = longint;

  const
    XtCacheNone = $001;    
    XtCacheAll = $002;    
    XtCacheByDisplay = $003;    
    XtCacheRefCount = $100;    


  type
    Boolean = char;

    XtArgVal = longint;

    XtEnum = byte;

    Cardinal = dword;

    Dimension = word;


    Position = smallint;


    XtPointer = pointer;



    Opaque = XtPointer;
{$include <X11/Core.h>}
{$include <X11/Composite.h>}
{$include <X11/Constraint.h>}
{$include <X11/Object.h>}
{$include <X11/RectObj.h>}

  type
    XtTranslations = ^_TranslationData;

    XtAccelerators = ^_TranslationData;

    Modifiers = dword;


    XtActionProc = procedure (_para1:Widget; _para2:PXEvent; _para3:PString; _para4:PCardinal);cdecl;

    XtBoundActions = ^XtActionProc;

    _XtActionsRec = record
        _string : String;
        proc : XtActionProc;
      end;
    XtActionsRec = _XtActionsRec;










    XtAddressMode = (XtAddress,XtBaseOffset,XtImmediate,XtResourceString,
      XtResourceQuark,XtWidgetBaseOffset,XtProcedureArg
      );

    XtConvertArgRec = record
        address_mode : XtAddressMode;
        address_id : XtPointer;
        size : Cardinal;
      end;
    XtConvertArgList = ^XtConvertArgRec;


    XtConvertArgProc = procedure (_para1:Widget; _para2:PCardinal; _para3:PXrmValue);cdecl;


    XtWidgetGeometry = record
        request_mode : XtGeometryMask;
        x : Position;
        y : Position;
        width : Dimension;
        height : Dimension;
        border_width : Dimension;
        sibling : Widget;
        stack_mode : longint;
      end;


  const
    XtCWQueryOnly = 1 shl 7;    

    XtSMDontChange = 5;    



  type

    XtConverter = procedure (_para1:PXrmValue; _para2:PCardinal; _para3:PXrmValue; _para4:PXrmValue);cdecl;


    XtTypeConverter = function (_para1:PDisplay; _para2:PXrmValue; _para3:PCardinal; _para4:PXrmValue; _para5:PXrmValue; 
                 _para6:PXtPointer):Boolean;cdecl;


    XtDestructor = procedure (_para1:XtAppContext; _para2:PXrmValue; _para3:XtPointer; _para4:PXrmValue; _para5:PCardinal);cdecl;

    XtCacheRef = Opaque;

    XtActionHookId = Opaque;


    XtActionHookProc = procedure (_para1:Widget; _para2:XtPointer; _para3:String; _para4:PXEvent; _para5:PString; 
                  _para6:PCardinal);cdecl;

    XtBlockHookId = dword;


    XtBlockHookProc = procedure (_para1:XtPointer);cdecl;


    XtKeyProc = procedure (_para1:PDisplay; _para2:_XtKeyCode; _para3:Modifiers; _para4:PModifiers; _para5:PKeySym);cdecl;


    XtCaseProc = procedure (_para1:PDisplay; _para2:KeySym; _para3:PKeySym; _para4:PKeySym);cdecl;


    XtEventHandler = procedure (_para1:Widget; _para2:XtPointer; _para3:PXEvent; _para4:PBoolean);cdecl;

    EventMask = dword;

    XtListPosition = (XtListHead,XtListTail);

    XtInputMask = dword;

  const
    XtInputNoneMask = 0;    
    XtInputReadMask = 1 shl 0;    
    XtInputWriteMask = 1 shl 1;    
    XtInputExceptMask = 1 shl 2;    


  type

    XtTimerCallbackProc = procedure (_para1:XtPointer; _para2:PXtIntervalId);cdecl;


    XtInputCallbackProc = procedure (_para1:XtPointer; _para2:Plongint; _para3:PXtInputId);cdecl;


    XtSignalCallbackProc = procedure (_para1:XtPointer; _para2:PXtSignalId);cdecl;

    Arg = record
        name : String;
        value : XtArgVal;
      end;
    ArgList = ^Arg;

    XtVarArgsList = XtPointer;



    XtCallbackProc = procedure (_para1:Widget; _para2:XtPointer; _para3:XtPointer);cdecl;

    _XtCallbackRec = record
        callback : XtCallbackProc;
        closure : XtPointer;
      end;
    XtCallbackRec = _XtCallbackRec;
    XtCallbackList = ^_XtCallbackRec;

    XtCallbackStatus = (XtCallbackNoList,XtCallbackHasNone,XtCallbackHasSome
      );





    XtGeometryResult = (XtGeometryYes,XtGeometryNo,XtGeometryAlmost,
      XtGeometryDone);

    XtGrabKind = (XtGrabNone,XtGrabNonexclusive,XtGrabExclusive
      );

    XtPopdownIDRec = record
        shell_widget : Widget;
        enable_widget : Widget;
      end;
    XtPopdownID = ^XtPopdownIDRec;








    _XtResource = record
        resource_name : String;
        resource_class : String;
        resource_type : String;
        resource_size : Cardinal;
        resource_offset : Cardinal;
        default_type : String;
        default_addr : XtPointer;
      end;
    XtResource = _XtResource;
    XtResourceList = ^_XtResource;


    XtResourceDefaultProc = procedure (_para1:Widget; _para2:longint; _para3:PXrmValue);cdecl;


    XtLanguageProc = function (_para1:PDisplay; _para2:String; _para3:XtPointer):String;cdecl;


    XtErrorMsgHandler = procedure (_para1:String; _para2:String; _para3:String; _para4:String; _para5:PString; 
                  _para6:PCardinal);cdecl;


    XtErrorHandler = procedure (_para1:String);cdecl;


    XtCreatePopupChildProc = procedure (_para1:Widget);cdecl;


    XtWorkProc = function (_para1:XtPointer):Boolean;cdecl;

    SubstitutionRec = record
        match : char;
        substitution : _XtString;
      end;
    Substitution = ^SubstitutionRec;


    XtFilePredicate = function (_para1:String):Boolean;cdecl;

    XtRequestId = XtPointer;


    XtConvertSelectionProc = function (_para1:Widget; _para2:PAtom; _para3:PAtom; _para4:PAtom; _para5:PXtPointer; 
                 _para6:Pdword; _para7:Plongint):Boolean;cdecl;


    XtLoseSelectionProc = procedure (_para1:Widget; _para2:PAtom);cdecl;


    XtSelectionDoneProc = procedure (_para1:Widget; _para2:PAtom; _para3:PAtom);cdecl;


    XtSelectionCallbackProc = procedure (_para1:Widget; _para2:XtPointer; _para3:PAtom; _para4:PAtom; _para5:XtPointer; 
                  _para6:Pdword; _para7:Plongint);cdecl;


    XtLoseSelectionIncrProc = procedure (_para1:Widget; _para2:PAtom; _para3:XtPointer);cdecl;


    XtSelectionDoneIncrProc = procedure (_para1:Widget; _para2:PAtom; _para3:PAtom; _para4:PXtRequestId; _para5:XtPointer);cdecl;


    XtConvertSelectionIncrProc = function (_para1:Widget; _para2:PAtom; _para3:PAtom; _para4:PAtom; _para5:PXtPointer; 
                 _para6:Pdword; _para7:Plongint; _para8:Pdword; _para9:XtPointer; _para10:PXtRequestId):Boolean;cdecl;


    XtCancelConvertSelectionProc = procedure (_para1:Widget; _para2:PAtom; _para3:PAtom; _para4:PXtRequestId; _para5:XtPointer);cdecl;


    XtEventDispatchProc = function (_para1:PXEvent):Boolean;cdecl;


    XtExtensionSelectProc = procedure (_para1:Widget; _para2:Plongint; _para3:PXtPointer; _para4:longint; _para5:XtPointer);cdecl;

(* error 
extern Boolean XtConvertAndStore(

in declaration at line 509 *)


    function XtCallConverter(_para1:PDisplay; _para2:XtTypeConverter; _para3:XrmValuePtr; _para4:Cardinal; _para5:XrmValuePtr; 
               _para6:PXrmValue; _para7:PXtCacheRef):Boolean;cdecl;


    function XtDispatchEvent(_para1:PXEvent):Boolean;cdecl;


    function XtCallAcceptFocus(_para1:Widget; _para2:PTime):Boolean;cdecl;



    function XtPeekEvent(_para1:PXEvent):Boolean;cdecl;


    function XtAppPeekEvent(_para1:XtAppContext; _para2:PXEvent):Boolean;cdecl;


    function XtIsSubclass(_para1:Widget; _para2:WidgetClass):Boolean;cdecl;


    function XtIsObject(_para1:Widget):Boolean;cdecl;



    function _XtCheckSubclassFlag(_para1:Widget; _para2:_XtXtEnum):Boolean;cdecl;



    function _XtIsSubclassOf(_para1:Widget; _para2:WidgetClass; _para3:WidgetClass; _para4:_XtXtEnum):Boolean;cdecl;


    function XtIsManaged(_para1:Widget):Boolean;cdecl;


    function XtIsRealized(_para1:Widget):Boolean;cdecl;


    function XtIsSensitive(_para1:Widget):Boolean;cdecl;


    function XtOwnSelection(_para1:Widget; _para2:Atom; _para3:Time; _para4:XtConvertSelectionProc; _para5:XtLoseSelectionProc; 
               _para6:XtSelectionDoneProc):Boolean;cdecl;


    function XtOwnSelectionIncremental(_para1:Widget; _para2:Atom; _para3:Time; _para4:XtConvertSelectionIncrProc; _para5:XtLoseSelectionIncrProc; 
               _para6:XtSelectionDoneIncrProc; _para7:XtCancelConvertSelectionProc; _para8:XtPointer):Boolean;cdecl;


    function XtMakeResizeRequest(_para1:Widget; _para2:_XtDimension; _para3:_XtDimension; _para4:PDimension; _para5:PDimension):XtGeometryResult;cdecl;


    procedure XtTranslateCoords(_para1:Widget; _para2:_XtPosition; _para3:_XtPosition; _para4:PPosition; _para5:PPosition);cdecl;


    function XtGetKeysymTable(_para1:PDisplay; _para2:PKeyCode; _para3:Plongint):^KeySym;cdecl;


    procedure XtKeysymToKeycodeList(_para1:PDisplay; _para2:KeySym; _para3:PPKeyCode; _para4:PCardinal);cdecl;



    procedure XtStringConversionWarning(_XtString:_Xconst; _XtString:_Xconst);cdecl;


    procedure XtDisplayStringConversionWarning(_para1:PDisplay; _XtString:_Xconst; _XtString:_Xconst);cdecl;

(* error 
externalref XtConvertArgRec const colorConvertArgs[];
 in declarator_list *)
(* error 
externalref XtConvertArgRec const screenConvertArg[];
 in declarator_list *)


    procedure XtAppAddConverter(_para1:XtAppContext; _XtString:_Xconst; _XtString:_Xconst; _para4:XtConverter; _para5:XtConvertArgList; 
                _para6:Cardinal);cdecl;


